--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
   "name": "vite-lambda",
   "version": "0.1.0",
+  "type": "module",
   "bin": {
     "vite-lambda": "bin/vite-lambda.js"
   },
   "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "test": "jest",
-    "cdk": "cdk"
+    "build": "vite build; cp ./package.json ./dist/package.json"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.159",
     "@types/jest": "^29.5.14",
     "@types/node": "^24.10.1",
+    "aws-cdk": "2.1033.0",
+    "aws-lambda": "^1.0.7",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "aws-cdk": "2.1033.0",
     "ts-node": "^10.9.2",
-    "typescript": "~5.9.3"
+    "typescript": "~5.9.3",
+    "vite": "^7.3.0",
+    "vite-node": "^5.2.0"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.215.0",
+    "aws-cdk-lib": "^2.233.0",
     "constructs": "^10.0.0"
   }
 }
